@@ -1,3 +1,11 @@
+2010-05-18  Hui Zhu  <teawater@gmail.com>
+
+	* linux-fork.c (inferior_call_waitpid_cleanup): Add check
+	for oldfp.
+	(inferior_call_waitpid): Move make_cleanup out of check.
+	Check the return of waitpid.
+	(delete_checkpoint_command): Add pptid to save fi->parent_ptid.
+
 2010-05-17  Michael Snyder  <msnyder@vmware.com>
 
 	* tui/tui.c: White space.
